--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </section>
 
 <!-- Paper abstract -->
-<section class="section hero is-light">
+<section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -181,46 +181,35 @@
 </section>
 <!-- End paper abstract -->
 
-        <section class="hero is-light is-small">
-
-
-            <div class="hero-body">
-                <div class="container is-max-desktop">
-                    <h2 class="title is-3">D-NeRF Datasets</h2>
-                    <div id="results-carousel" class="carousel results-carousel">
-
-                        <div class="item item-chair-tp">
-                            <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/mutant_100.0.mp4"
-                    type="video/mp4">
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3">D-NeRF Datasets</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-chair-tp">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/mutant_100.0.mp4" type="video/mp4">
           </video>
-                        </div>
-
-                        <div class="item item-blueshirt">
-                            <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/trex_100.0.mp4"
-                    type="video/mp4">
+        </div>
+        <div class="item item-blueshirt">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/trex_100.0.mp4" type="video/mp4">
           </video>
-                        </div>
-
-                        <div class="item item-coffee">
-                            <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/hellwarrior_100.0.mp4"
-                    type="video/mp4">
+        </div>
+        <div class="item item-coffee">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/hellwarrior_100.0.mp4" type="video/mp4">
           </video>
-                        </div>
-                        <div class="item item-mask">
-                            <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/hook_100.0.mp4"
-                    type="video/mp4">
+        </div>
+        <div class="item item-mask">
+          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/hook_100.0.mp4" type="video/mp4">
           </video>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
-
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   
 <section class="section">
 <div class="container is-max-desktop">
