--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
   </div>
 </section>
 <!-- End paper abstract -->
-
-<!--
+  
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container is-max-desktop">
@@ -189,29 +188,28 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/mutant_100.0.mp4" type="video/mp4">
+            <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-blueshirt">
           <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/trex_100.0.mp4" type="video/mp4">
+            <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-coffee">
           <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/hellwarrior_100.0.mp4" type="video/mp4">
+            <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
           <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/hook_100.0.mp4" type="video/mp4">
+            <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
           </video>
         </div>
       </div>
     </div>
   </div>
 </section>
--->
   
 <section class="section">
 <div class="container is-max-desktop">
