--- a/index.html
+++ b/index.html
@@ -206,6 +206,16 @@
             <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
           </video>
         </div>
+        <div class="item item-coffee">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/dnerf/standup.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-mask">
+          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/dnerf/lego.mp4" type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
   </div>
