--- a/index.html
+++ b/index.html
@@ -187,27 +187,67 @@
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="30%">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="30%">
             <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline height="30%">
             <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="mask" autoplay controls muted loop playsinline height="30%">
             <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/dnerf/standup.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-mask">
+          <video poster="" id="mask" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/dnerf/lego.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3">Custom Datasets</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-chair-tp">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/custom/robot.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-blueshirt">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/custom/lamp.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-coffee">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/custom/kettle.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-mask">
+          <video poster="" id="mask" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-coffee">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline height="30%">
             <source src="./static/videos/dnerf/standup.mp4" type="video/mp4">
           </video>
         </div>
