--- a/index.html
+++ b/index.html
@@ -187,32 +187,32 @@
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="30%">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline width="30%" height="30%">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="30%">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline width="30%" height="30%">
             <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="30%">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline width="30%" height="30%">
             <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="30%">
+          <video poster="" id="mask" autoplay controls muted loop playsinline width="30%" height="30%">
             <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="30%">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline width="30%" height="30%">
             <source src="./static/videos/dnerf/standup.mp4" type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="30%">
+          <video poster="" id="mask" autoplay controls muted loop playsinline width="30%" height="30%">
             <source src="./static/videos/dnerf/lego.mp4" type="video/mp4">
           </video>
         </div>
