--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
   </div>
 </section>
 <!-- End paper abstract -->
-  
+
+<section class="section">  
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container is-max-desktop">
@@ -220,7 +221,8 @@
     </div>
   </div>
 </section>
-
+</section>
+  
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container is-max-desktop">
