--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline width=100 height=100>
+        <div class="item item-chair-tp" width="30%" height="30%">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
