--- a/index.html
+++ b/index.html
@@ -181,13 +181,25 @@
 </section>
 <!-- End paper abstract -->
 
+<style>
+.videoContainer {
+    height: 200px;
+    width: 400px;   
+}
+
+#myVideo {
+  width: 100%;
+  height: 100%;
+}
+</style>
+  
 <section class="section">  
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container is-max-desktop">
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-chair-tp" width="30%" height="30%">
+        <div class="videoContainer">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
