--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 
 <style>
 .videoContainer {
-    height: 200px;
-    width: 400px;   
+    height: 300px;
+    width: 300px;   
 }
 
 #myVideo {
@@ -204,28 +204,28 @@
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline width="30%" height="30%">
+        <div class="videoContainer">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline width="30%" height="30%">
+        <div class="videoContainer">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline width="30%" height="30%">
+        <div class="videoContainer">
+          <video poster="" id="mask" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline width="30%" height="30%">
+        <div class="videoContainer">
+          <video poster="" id="coffee" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/standup.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline width="30%" height="30%">
+        <div class="videoContainer">
+          <video poster="" id="mask" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/lego.mp4" type="video/mp4">
           </video>
         </div>
