--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
 <style>
 .videoContainer {
     height: 300px;
-    width: 300px;   
+    width: 300px;
+    float: left; 
 }
 
 #myVideo {
@@ -200,7 +201,7 @@
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="videoContainer">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline width="100%" height="100%">
+          <video poster="" id="myVideo" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
