--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="videoContainer">
-          <video poster="" id="myVideo" autoplay controls muted loop playsinline width="100%" height="100%">
+        <div class="videoContainer" style="float:left">
+          <video poster="" id="myVideo" autoplay controls muted loop playsinline width="100%" height="100%" style="float:left">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
         </div>
