--- a/index.html
+++ b/index.html
@@ -201,7 +201,42 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">D-NeRF Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="videoContainer" style="float:left">
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/bouncingballs.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/standup.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/lego.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        
+        <!--div class="videoContainer" style="float:left">
           <video poster="" id="myVideo" autoplay controls muted loop playsinline width="100%" height="100%" style="float:left">
             <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
           </video>
@@ -230,7 +265,7 @@
           <video poster="" id="mask" autoplay controls muted loop playsinline width="100%" height="100%">
             <source src="./static/videos/dnerf/lego.mp4" type="video/mp4">
           </video>
-        </div>
+      </div-->
       </div>
     </div>
   </div>
