--- a/index.html
+++ b/index.html
@@ -250,6 +250,23 @@
         <div>
           <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
               <source src="./static/videos/custom/robot.mp4" type="video/mp4">
             </video>
           </div>
