--- a/index.html
+++ b/index.html
@@ -247,23 +247,7 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Custom Datasets</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item-small" style="float: left">
-          <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-            <source src="./static/videos/custom/robot.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item-small" style="float: left">
-          <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-            <source src="./static/videos/custom/lamp.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item-small" style="float: left">
-          <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-            <source src="./static/videos/custom/kettle.mp4" type="video/mp4">
-          </video>
-        </div>
-        
-        <!--div>
+        <div>
           <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
               <source src="./static/videos/custom/robot.mp4" type="video/mp4">
@@ -280,24 +264,23 @@
             </video>
           </div>
         </div>
-        
         <div>
           <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/dnerf/mutant.mp4" type="video/mp4">
+              <source src="./static/videos/custom/robot.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/dnerf/hellwarrior.mp4" type="video/mp4">
+              <source src="./static/videos/custom/lamp.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/dnerf/hook.mp4" type="video/mp4">
+              <source src="./static/videos/custom/kettle.mp4" type="video/mp4">
             </video>
           </div>
-      </div-->
+        </div>
       </div>
     </div>
   </div>
