--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </a>
               </span-->
               <span class="link-block">
-                <a href="https://github.com/hustvl/4DGaussians" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://github.com/choonsik93/ArtGS" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
