--- a/index.html
+++ b/index.html
@@ -331,6 +331,16 @@
           <source src="./static/videos/dnerf/hook_process.mp4" type="video/mp4">
         </video>
       </div>
+      <div class="item-small">
+        <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+          <source src="./static/videos/dnerf/bouncingballs_process.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="item-small">
+        <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+          <source src="./static/videos/dnerf/lego_process.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
   </div>
 </section>
