--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
   <div class="hero-body">
     <div class="container is-max-desktop">
       <h2 class="title is-3">Ablation Studies</h2>
+      We propose 3D reconstruction loss to enhance the decomposition performance. We append the decomposition results using only the photormetric loss except the proposed 3D reconstruction loss.
       <div class="item-small">
         <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
           <source src="./static/videos/dnerf/hellwarrior_process.mp4" type="video/mp4">
