--- a/index.html
+++ b/index.html
@@ -352,25 +352,41 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Ablation Studies</h2>
       We propose 3D reconstruction loss to enhance the decomposition performance. We append the decomposition results using only the photormetric loss except the proposed 3D reconstruction loss.
-      <div class="item-small">
-        <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-          <source src="./static/videos/dnerf/hellwarrior_process.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="item-small">
-        <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-          <source src="./static/videos/dnerf/hook_process.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="item-small">
-        <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-          <source src="./static/videos/dnerf/bouncingballs_process.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="item-small">
-        <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-          <source src="./static/videos/dnerf/lego_process.mp4" type="video/mp4">
-        </video>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/custom/robot.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/custom/lamp.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/custom/kettle.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/custom/robot.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/custom/lamp.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/custom/kettle.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
       </div>
     </div>
   </div>
