--- a/index.html
+++ b/index.html
@@ -388,6 +388,43 @@
           </div>
         </div>
       </div>
+      We append the result when using the Chmafer distance loss instead of the voxel-based 3D reconstruction loss.
+      <div id="results-carousel" class="carousel results-carousel">
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/hellwarrior_no3d.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/hook_no3d.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/bouncingballs_no3d.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/lego_no3d.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/mutant_no3d.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/dnerf/standup_no3d.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
