--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (released soon)</span>
+                  <span>Code</span>
                 </a>
               </span>
             </div>
