--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!--span class="link-block">
-              <a href="https://arxiv.org/pdf/2310.08528v2.pdf" class="external-link button is-normal is-rounded is-dark">
+              <span class="link-block">
+              <a href="https://github.com/choonsik93/artnerf/blob/master/static/pdfs/2024_iros_u3dpd.pdf" class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-file-pdf"></i>
                 </span>
                 <span>Paper</span>
               </a>
               </span>
-              <span class="link-block">
+              <!--span class="link-block">
                 <a href="https://arxiv.org/abs/2310.08528" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
