--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-              <a href="https://github.com/choonsik93/artnerf/blob/master/static/pdfs/2024_iros_u3dpd.pdf" class="external-link button is-normal is-rounded is-dark">
+              <a href="pdfs/2024_iros_u3dpd.pdf" class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-file-pdf"></i>
                 </span>
