--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
                   <span>Code</span>
                 </a>
               </span>
+              
+              <span class="link-block">
+                <a href="https://youtu.be/satkga-7_4c?si=llDbBFJ_QZ9B-e8J" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fab fa-youtube"></i>
+                </span>
+                <span>Video</span>
+              </a>
+              </span>
+              
             </div>
           </div>
         </div>
